--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"c9": "webpack-dev-server --config webpack.dev.js --host $IP --port $PORT",
-		"start": "webpack-dev-server --config webpack.dev.js --hot",
+		"start": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --hot",
 		"gitpod": "webpack-dev-server --config webpack.dev.js --host 0.0.0.0 --port 3000",
 		"build": "webpack --config webpack.prod.js",
 		"deploy": "node deploy-to-github.js"
